Bug #31276 Micro GCP timeout set too lo (2 seconds)
Submitted: 28 Sep 2007 13:38 Modified: 2 Oct 2007 15:26
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:GCE 6.2 OS:Any
Assigned to: Tomas Ulin Target Version:

[28 Sep 2007 13:38] Tomas Ulin
Description:
easy to provoke micro GCP stop

How to repeat:
.
[28 Sep 2007 13:45] Tomas Ulin
pushed to CGE 6.2.7
[28 Sep 2007 13:45] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/34636

ChangeSet@1.2639, 2007-09-28 13:55:13+02:00, tomas@whalegate.ndb.mysql.com +3 -0
  BUG#31276 Micro GCP timeout set too lo (2 seconds)
  - add config param
  - timeout must be set in relation to other timeouts
[2 Oct 2007 15:26] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in mysql-5.1.22-ndb-6.2.7 and mysql-5.1.22-ndb-6.3.4 changelogs, new
configuration parameter in 5.1 Cluster chapter of Manual. Verified applicable versions
with Tomas.
[5 Nov 2007 14:53] Bugs System
Pushed into 6.0.4-alpha