BUG#31276 Micro GCP timeout set too lo (2 seconds) - add config param - timeout must be set in relation to other timeouts